--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".SignedInActivity">
+        <activity android:name=".SignedInActivity"
+        android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity android:name=".RegisterActivity">
         </activity>
